<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.usuario.examlp3.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/login" />

   <EditText
       android:id="@+id/edtUserLog"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="102dp"
       android:ems="10"
       android:hint="@string/action_user"
       android:layout_alignParentTop="true"
       android:layout_centerHorizontal="true" />
    <EditText
        android:id="@+id/edtPassowrndLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtUserLog"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/action_password"/>

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edtPassowrndLog"
        android:layout_marginLeft="71dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="64dp"
        android:text="@string/action_ingresar" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/btnIngresar"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:text="@string/action_registrarse" />


</RelativeLayout>
